pet-service/k8s/adoption-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adoption-service
  labels:
    app: adoption-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: adoption-service
  template:
    metadata:
      labels:
        app: adoption-service
    spec:
      containers:
      - name: adoption-service
        image: lello2306/adoption-service:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: adoption-service
spec:
  selector:
    app: adoption-service
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
