pet-service/k8s/pet-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pet-service
  labels:
    app: pet-service
spec:
  replicas: 2           
  selector:
    matchLabels:
      app: pet-service
  template:
    metadata:
      labels:
        app: pet-service
    spec:
      containers:
      - name: pet-service
        image: lello2306/pet-service:latest
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: pet-service
spec:
  selector:
    app: pet-service
  ports:
  - port: 8081
    targetPort: 8081
  type: ClusterIP
