pet-service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pet-adoption-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /api/pets(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: pet-service
            port:
              number: 8081
      - path: /api/adoptions(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: adoption-service
            port:
              number: 3000
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service
            port:
              number: 80
